--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
-/*  your css code here. If applicable */
+#yellow{
+	width:100%;
+	border:2px solid green;
+	background-color:yellow;
+	border-width:1px;
+}
+#red{
+	width:100%;
+	border:2px solid black;
+	background-color:red;
+	border-width:1px;
+}
+#green{
+	width:100%;
+	border:2px solid yellow;
+	background-color:green;
+	border-width:1px;
+}
